[gd_scene load_steps=6 format=3 uid="uid://icio83uyyvtn"]

[ext_resource type="Script" uid="uid://wo41iw8ih51o" path="res://Scenes/PCUI/scan_net.gd" id="1_t28qd"]
[ext_resource type="Script" uid="uid://dowle5kcyix4l" path="res://Scenes/PCUI/window_base.gd" id="1_ty774"]
[ext_resource type="Texture2D" uid="uid://b5rbk7fhvw1ky" path="res://Scenes/PCUI/EtterCap/cmd bgs.png" id="3_7bwk4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t28qd"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ye5f5"]
texture = ExtResource("3_7bwk4")

[node name="ScanNet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t28qd")

[node name="WindowBase" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ty774")

[node name="MainArea" type="PanelContainer" parent="WindowBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t28qd")

[node name="MarginContainer" type="MarginContainer" parent="WindowBase/MainArea"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="History" type="PanelContainer" parent="WindowBase/MainArea/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ye5f5")

[node name="ScrollContainer" type="ScrollContainer" parent="WindowBase/MainArea/MarginContainer/History"]
z_index = 100
layout_mode = 2

[node name="HistoryRows" type="VBoxContainer" parent="WindowBase/MainArea/MarginContainer/History/ScrollContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/MainArea"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Button" type="Button" parent="WindowBase/MainArea/PanelContainer"]
layout_mode = 2
text = "X"

[connection signal="pressed" from="WindowBase/MainArea/PanelContainer/Button" to="." method="_on_button_pressed"]
